# talkscript

./: Cargo.toml  test_python.py
benches/: talkscript_benchmark.rs
src/: arena.rs  ast.rs  compiler.rs  ir.rs  lexer.rs  lib.rs  parse_rules.rs  parser.rs  ssa_ir.rs  token.rs  type_registry.rs  vm.rs
src/compiler/: ast.rs  canon_ast.rs  comptime_evaluator.rs  comptime_value.rs  hir.rs  lexer.rs  mod.rs  name_resolver.rs  parse_rules.rs  parser.rs  resolver.rs  sema.rs  tokens.rs  type_checker.rs  type_error.rs  type_info.rs
src/vm/: allocator.rs  async_runtime.rs  function.rs  heap.rs  instruction.rs  memory.rs  mod.rs  module.rs  object.rs  safepoint.rs  stack.rs  unit.rs  vm_types.rs
