[package]
name = "talkscript"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8.12"
simple-ternary = "0.3.0"
thiserror = "2.0.17"
const-assert = { git = "https://github.com/aquarius2019/const-assert.git" }
string-interner = "0.19.0"
slotmap = "1.1.1"

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "talkscript_benchmark"
harness = false
